run package msbuikld

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -14,3 +14,7 @@ LazyData: true
 <ul>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
 </ul>
+<h2>Library: Agent.dll</h2>
+<ul>
+<li><a href="./Agent/chatglm.html">chatglm</a></li>
+</ul>
