run package msbuild

--- a/vignettes/Agent/chatglm.html
+++ b/vignettes/Agent/chatglm.html
@@ -97,10 +97,16 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./chatglm/history_json.html">history_json</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="batch_transaltion">
+    <a href="./chatglm/batch_transaltion.html">batch_transaltion</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
     <hr />
     <div style="text-align: center;">[<a href="../index.html">Document Index</a>]</div>
   </body>
-</html>
+</html>
