--- a/vignettes/Agent/chatglm/batch_transaltion.html
+++ b/vignettes/Agent/chatglm/batch_transaltion.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>history_json</title>
+    <title>batch_transaltion</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -13,21 +13,21 @@
 
         <table style="width: 100%;">
             <tr>
-                <td>history_json {chatglm}</td>
+                <td>batch_transaltion {chatglm}</td>
                 <td style="text-align: right;">R Documentation</td>
             </tr>
         </table>
 
-        <h2>history_json</h2>
+        <h2>batch_transaltion</h2>
 
         <h3>Description</h3>
 
-        history_json
+        batch_transaltion
 
         <h3>Usage</h3>
 
         <div style="width: 100%; padding-left: 3%; color: black;">
-            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>history_json</strong>(<i>his</i>);</code></pre>
+            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>batch_transaltion</strong>(<i>content</i>);</code></pre>
         </div>
 
         <h3>Arguments</h3>
@@ -47,7 +47,7 @@
 
         <h3>Value</h3>
 
-        this function returns data object of type string.<h4>clr value class</h4><ul><li>string</li></ul>
+        this function returns data object of type <a href="/vignettes/clr/TalkGenerator/ChatGLM/GLMBatchTask.html">GLMBatchTask</a>.<h4>clr value class</h4><ul><li><a href="/vignettes/clr/TalkGenerator/ChatGLM/GLMBatchTask.html">GLMBatchTask</a></li></ul>
 
         <h3 style="display: none;">Examples</h3>
 
