--- a/vignettes/clr/TalkGenerator/ChatGLM/History.html
+++ b/vignettes/clr/TalkGenerator/ChatGLM/History.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>TalkGenerator.ChatGLM.ChatHistory</title>
+    <title>TalkGenerator.ChatGLM.History</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -13,23 +13,26 @@
 
         <table style="width: 100%;">
             <tr>
-                <td>ChatHistory {TalkGenerator.ChatGLM}</td>
+                <td>History {TalkGenerator.ChatGLM}</td>
                 <td style="text-align: right;">.NET clr documentation</td>
             </tr>
         </table>
 
-        <h2>ChatHistory</h2>
+        <h2>History</h2>
 
         <h3>Description</h3>
 
-        <p>helper for create chatglm history</p>
+        
 
         <h3>Declare</h3>        
 
         <pre>
             <code id="clr_ts">
 # namespace TalkGenerator.ChatGLM
-export class ChatHistory {
+export class History {
+   content: string;
+   metadata: string;
+   role: string;
 }
 </code>
         </pre>
