run package msbuild

--- a/vignettes/Agent/chatglm.html
+++ b/vignettes/Agent/chatglm.html
@@ -103,6 +103,12 @@ table caption {font-size:14px;font-weight:bolder;}
     <a href="./chatglm/batch_transaltion.html">batch_transaltion</a>
   </td>
   <td></td>
+</tr>
+<tr>
+  <td id="parse_batch_output">
+    <a href="./chatglm/parse_batch_output.html">parse_batch_output</a>
+  </td>
+  <td></td>
 </tr></tbody>
       </table>
     </div>
