run package updates

--- a/vignettes/Agent/chatglm/batch_transaltion.html
+++ b/vignettes/Agent/chatglm/batch_transaltion.html
@@ -27,7 +27,9 @@
         <h3>Usage</h3>
 
         <div style="width: 100%; padding-left: 3%; color: black;">
-            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>batch_transaltion</strong>(<i>content</i>);</code></pre>
+            <pre><code class='language-R' style="color: black; font-weight:normal;"><strong>batch_transaltion</strong>(<i>content</i>,
+    <i>prompt.text</i> = <span style='color: brown;'><strong>"你是一个从英文到中文的语言翻译器"</strong></span>,
+    <i>add.explains</i> = <span style='color: blue !important;'>TRUE</span>);</code></pre>
         </div>
 
         <h3>Arguments</h3>
