run package msbuild

--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -1,4 +1,9 @@
-﻿<pre>Package: LLMs
+﻿<head>
+<title>tools package for processing LLMs</title>
+</head>
+<body>
+<h1>tools package for processing LLMs</h1>
+<pre>Package: LLMs
 Type: Package
 Title: tools package for processing LLMs
 Version: 0.1.0
@@ -18,4 +23,6 @@ LazyData: true
 <h2>Library: Agent.dll</h2>
 <ul>
 <li><a href="./Agent/chatglm.html">chatglm</a></li>
+<li><a href="./Agent/llama.html">llama</a></li>
 </ul>
+</body>
