--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -23,6 +23,6 @@ LazyData: true
 <h2>Library: Agent.dll</h2>
 <ul>
 <li><a href="./Agent/chatglm.html">chatglm</a></li>
-<li><a href="./Agent/llama.html">llama</a></li>
+<li><a href="./Agent/ollama.html">ollama</a></li>
 </ul>
 </body>
