--- a/vignettes/Agent/chatglm.html
+++ b/vignettes/Agent/chatglm.html
@@ -90,25 +90,25 @@ table caption {font-size:14px;font-weight:bolder;}
   <td id="input_and_response">
     <a href="./chatglm/input_and_response.html">input_and_response</a>
   </td>
-  <td></td>
+  <td><p>add a new record of chat input and ai response for create the history data</p></td>
 </tr>
 <tr>
   <td id="history_json">
     <a href="./chatglm/history_json.html">history_json</a>
   </td>
-  <td></td>
+  <td><p>build json string for chatglm history input</p></td>
 </tr>
 <tr>
   <td id="batch_transaltion">
     <a href="./chatglm/batch_transaltion.html">batch_transaltion</a>
   </td>
-  <td></td>
+  <td><p>create json data for run chatglm batch task</p></td>
 </tr>
 <tr>
   <td id="parse_batch_output">
     <a href="./chatglm/parse_batch_output.html">parse_batch_output</a>
   </td>
-  <td></td>
+  <td><p>parse the result of the chatglm batch request</p></td>
 </tr></tbody>
       </table>
     </div>
