--- a/vignettes/Agent/chatglm/input_and_response.html
+++ b/vignettes/Agent/chatglm/input_and_response.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>input_and_response</title>
+    <title>add a new record of chat input and ai response for create the history data</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -18,11 +18,11 @@
             </tr>
         </table>
 
-        <h2>input_and_response</h2>
+        <h2>add a new record of chat input and ai response for create the history data</h2>
 
         <h3>Description</h3>
 
-        input_and_response
+        
 
         <h3>Usage</h3>
 
@@ -34,6 +34,17 @@
 
         <table>
             
+<dt>his</dt>
+<dd><p>[as <a href="/vignettes/clr/TalkGenerator/ChatGLM/ChatHistory.html">ChatHistory</a>]</p></dd>
+
+
+<dt>input</dt>
+<dd><p>[as string]</p></dd>
+
+
+<dt>response</dt>
+<dd><p>[as string]</p></dd>
+
         </table>
 
 
