--- a/vignettes/clr/TalkGenerator/ChatGLM/RequestBody.html
+++ b/vignettes/clr/TalkGenerator/ChatGLM/RequestBody.html
@@ -33,6 +33,7 @@ export class RequestBody {
    messages: <a href="/vignettes/clr/TalkGenerator/ChatGLM/History.html">History[]</a>;
    # 每个batch文件只能包含对单个模型的请求,支持 glm-4、glm-3-turbo.
    model: string;
+   # json list response
    stream: boolean;
    temperature: <a href="/vignettes/clr/System/Nullable`1.html">Nullable`1</a>;
 }
