--- a/vignettes/Agent/chatglm/history_json.html
+++ b/vignettes/Agent/chatglm/history_json.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>history_json</title>
+    <title>build json string for chatglm history input</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -18,11 +18,11 @@
             </tr>
         </table>
 
-        <h2>history_json</h2>
+        <h2>build json string for chatglm history input</h2>
 
         <h3>Description</h3>
 
-        history_json
+        
 
         <h3>Usage</h3>
 
@@ -34,6 +34,9 @@
 
         <table>
             
+<dt>his</dt>
+<dd><p>[as <a href="/vignettes/clr/TalkGenerator/ChatGLM/ChatHistory.html">ChatHistory</a>]</p></dd>
+
         </table>
 
 
