--- a/vignettes/Agent/chatglm/parse_batch_output.html
+++ b/vignettes/Agent/chatglm/parse_batch_output.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>parse_batch_output</title>
+    <title>parse the result of the chatglm batch request</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -18,11 +18,11 @@
             </tr>
         </table>
 
-        <h2>parse_batch_output</h2>
+        <h2>parse the result of the chatglm batch request</h2>
 
         <h3>Description</h3>
 
-        parse_batch_output
+        
 
         <h3>Usage</h3>
 
@@ -35,6 +35,13 @@
 
         <table>
             
+<dt>file</dt>
+<dd><p>-</p></dd>
+
+
+<dt>env</dt>
+<dd><p>[as <a href="/vignettes/clr/SMRUCC/Rsharp/Runtime/Environment.html">Environment</a>]</p></dd>
+
         </table>
 
 
