--- a/vignettes/clr/Ollama/JSON/FunctionCall/ToolCall.html
+++ b/vignettes/clr/Ollama/JSON/FunctionCall/ToolCall.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>TalkGenerator.DeepSeekResponse</title>
+    <title>Ollama.JSON.FunctionCall.ToolCall</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -13,12 +13,12 @@
 
         <table style="width: 100%;">
             <tr>
-                <td>DeepSeekResponse {TalkGenerator}</td>
+                <td>ToolCall {Ollama.JSON.FunctionCall}</td>
                 <td style="text-align: right;">.NET clr documentation</td>
             </tr>
         </table>
 
-        <h2>DeepSeekResponse</h2>
+        <h2>ToolCall</h2>
 
         <h3>Description</h3>
 
@@ -28,17 +28,19 @@
 
         <pre>
             <code id="clr_ts">
-# namespace TalkGenerator
-export class DeepSeekResponse {
-   output: string;
-   think: string;
+# namespace Ollama.JSON.FunctionCall
+export class ToolCall {
+   function: <a href="/vignettes/clr/Ollama/JSON/FunctionCall/FunctionCall.html">FunctionCall</a>;
+   id: string;
 }
 </code>
         </pre>
 
         <h3>.NET clr type reference tree</h3>
 
-        this clr type has no other .net clr type reference.
+        <ol>
+<li>use by <i>property</i> member <code>function</code>: <a href="/vignettes/clr/Ollama/JSON/FunctionCall/FunctionCall.html">FunctionCall</a></li>
+</ol>
 
 
         <hr />
