--- a/vignettes/clr/Agent/ChatGLM/GLMBatchTask.html
+++ b/vignettes/clr/Agent/ChatGLM/GLMBatchTask.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>TalkGenerator.ChatGLM.RequestBody</title>
+    <title>Agent.ChatGLM.GLMBatchTask</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
     <link rel="stylesheet" type="text/css" href="../../_assets/page.css">
@@ -13,29 +13,28 @@
 
         <table style="width: 100%;">
             <tr>
-                <td>RequestBody {TalkGenerator.ChatGLM}</td>
+                <td>GLMBatchTask {Agent.ChatGLM}</td>
                 <td style="text-align: right;">.NET clr documentation</td>
             </tr>
         </table>
 
-        <h2>RequestBody</h2>
+        <h2>GLMBatchTask</h2>
 
         <h3>Description</h3>
 
-        
+        <p>a task request data for invoke chatglm</p>
 
         <h3>Declare</h3>        
 
         <pre>
             <code id="clr_ts">
-# namespace TalkGenerator.ChatGLM
-export class RequestBody {
-   messages: <a href="/vignettes/clr/TalkGenerator/ChatGLM/History.html">History[]</a>;
-   # 每个batch文件只能包含对单个模型的请求,支持 glm-4、glm-3-turbo.
-   model: string;
-   # json list response
-   stream: boolean;
-   temperature: <a href="/vignettes/clr/System/Nullable`1.html">Nullable`1</a>;
+# namespace Agent.ChatGLM
+export class GLMBatchTask {
+   body: <a href="/vignettes/clr/Ollama/JSON/RequestBody.html">RequestBody</a>;
+   # 每个请求必须包含custom_id且是唯一的,长度必须为 6 -64 位.用来将结果和输入进行匹配.
+   custom_id: string;
+   method: string;
+   url: string;
 }
 </code>
         </pre>
@@ -43,8 +42,7 @@ export class RequestBody {
         <h3>.NET clr type reference tree</h3>
 
         <ol>
-<li>use by <i>property</i> member <code>messages</code>: <a href="/vignettes/clr/TalkGenerator/ChatGLM/History.html">History</a></li>
-<li>use by <i>property</i> member <code>temperature</code>: <a href="/vignettes/clr/System/Nullable`1.html">Nullable`1</a></li>
+<li>use by <i>property</i> member <code>body</code>: <a href="/vignettes/clr/Ollama/JSON/RequestBody.html">RequestBody</a></li>
 </ol>
 
 
