export chat api

--- a/vignettes/Agent/ollama.html
+++ b/vignettes/Agent/ollama.html
@@ -82,6 +82,18 @@ table caption {font-size:14px;font-weight:bolder;}
       <table class="table-three-line">
         <caption>.NET clr function exports</caption>
         <tbody><tr>
+  <td id="new">
+    <a href="./ollama/new.html">new</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
+  <td id="chat">
+    <a href="./ollama/chat.html">chat</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="deepseek_chat">
     <a href="./ollama/deepseek_chat.html">deepseek_chat</a>
   </td>
