call R# function test success

--- a/vignettes/Agent/ollama.html
+++ b/vignettes/Agent/ollama.html
@@ -94,6 +94,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="add_tool">
+    <a href="./ollama/add_tool.html">add_tool</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="deepseek_chat">
     <a href="./ollama/deepseek_chat.html">deepseek_chat</a>
   </td>
