--- a/vignettes/clr/Ollama/Ollama.html
+++ b/vignettes/clr/Ollama/Ollama.html
@@ -34,7 +34,7 @@ export class Ollama {
    server: string;
    temperature: double;
    tool_invoke: <a href="/vignettes/clr/System/Func`2.html">Func`2</a>;
-   tools: <a href="/vignettes/clr/Ollama/JSON/FunctionCall/FunctionTool.html">FunctionTool[]</a>;
+   tools: <a href="/vignettes/clr/Ollama/JSON/FunctionCall/FunctionTool.html">iterates(FunctionTool)</a>;
    url: string;
 }
 </code>
@@ -44,7 +44,7 @@ export class Ollama {
 
         <ol>
 <li>use by <i>property</i> member <code>tool_invoke</code>: <a href="/vignettes/clr/System/Func`2.html">Func`2</a></li>
-<li>use by <i>property</i> member <code>tools</code>: <a href="/vignettes/clr/Ollama/JSON/FunctionCall/FunctionTool.html">FunctionTool</a></li>
+<li>use by <i>property</i> member <code>tools</code>: <a href="/vignettes/clr/Ollama/JSON/FunctionCall/FunctionTool.html">iterates(FunctionTool)</a></li>
 </ol>
 
 
