--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -19,6 +19,7 @@ LazyData: true
 <h2>R Package Symbols</h2>
 <ul>
 <li><a href="./R/docs/.onLoad.html">.onLoad</a></li>
+<li><a href="./R/docs/agent_readcsv.html">agent_readcsv</a></li>
 </ul>
 <h2>Library: Agent.dll</h2>
 <ul>
